# chatterbox-explorer

./: .gitignore  .pre-commit-config.yaml  .rules  DECISIONS.md  FLOW_CONTROL.md  NOTES.md  PLAN.md  README.md  ROUTER.md  app.py  compat.py  presets.py  pyproject.toml  test_compat_shim.py  test_model_load.py
checklist/: implementation.md  planning.md  review.md
flow/: general-development.md  refactor-vs-rewrite.md  refactor.md  system-design.md  tooling-library.md
src/: __main__.py  bootstrap.py  cli.py  compat.py  logging_config.py
src/adapters/inbound/gradio/: handlers.py  ui.py
src/adapters/inbound/rest/: __init__.py  concurrency.py  exception_handlers.py  middleware.py  routes.py  schemas.py
src/adapters/outbound/: audio.py  device.py  memory.py  model_loader.py  watermark.py
src/adapters/primary/gradio/: handlers.py  ui.py
src/adapters/primary/rest/: __init__.py  routes.py
src/adapters/secondary/: audio.py  device.py  memory.py  model_loader.py  watermark.py
src/chatterbox_explorer/: __main__.py  bootstrap.py  cli.py  logging_config.py
src/chatterbox_explorer/adapters/primary/gradio/: handlers.py  ui.py
src/chatterbox_explorer/adapters/primary/rest/: __init__.py  routes.py
src/chatterbox_explorer/adapters/secondary/: audio.py  memory.py  model_loader.py  watermark.py
src/chatterbox_explorer/domain/: languages.py  models.py
src/chatterbox_explorer/ports/: input.py  output.py
src/chatterbox_explorer/services/: model_manager.py  tts.py  voice_conversion.py  watermark.py
src/domain/: exceptions.py  languages.py  models.py  presets.py  types.py
src/infrastructure/: __init__.py  config.py  constants.py  container.py  settings.py
src/ports/: input.py  output.py
src/services/: model_manager.py  tts.py  voice_conversion.py  watermark.py
tests/: conftest.py
tests/integration/: test_model_load.py
tests/unit/: test_compat.py  test_logging_config.py  test_port_contracts.py
tests/unit/adapters/: test_audio_preprocessor.py  test_device.py  test_memory_monitor.py  test_model_loader.py  test_watermark_detector.py
tests/unit/adapters/rest/: test_rest_benchmark.py  test_rest_exception_handlers.py  test_rest_routes.py  test_rest_schemas.py
tests/unit/domain/: test_exceptions.py  test_languages.py  test_models.py  test_presets.py
tests/unit/infrastructure/: test_config.py  test_constants.py  test_container.py  test_settings.py
tests/unit/services/: test_model_manager_service.py  test_tts_service.py  test_voice_conversion_service.py  test_watermark_service.py
